@startuml adapterInRest
skinparam packageStyle rectangle
skinparam shadowing false
top to bottom direction

package "infra.adapters.in.rest" as rest {
  class Controller <<RestController>>
  class ItemPedidoRequestDTO
  class ProdutoResponseDTO
  class PedidoResponseDTO
  class ItemPedidoResponseDTO
}

Controller ..> ProdutoResponseDTO:retorno
Controller ..> PedidoResponseDTO:retorno
Controller ..> ItemPedidoRequestDTO:parametro
ItemPedidoRequestDTO -[hidden]down-> Controller:parametro
PedidoResponseDTO "1" *-- "0..*" ItemPedidoResponseDTO : itens

@enduml
